finally fixed dropdown z-index completely

--- a/src/components/dropdownFull/styles.module.css
+++ b/src/components/dropdownFull/styles.module.css
@@ -44,3 +44,7 @@
 .small {
     font-size: .9rem;
 }
+
+.z {
+    transform:translateZ(1px);
+}
