--- a/src/containers/browse/styles.module.css
+++ b/src/containers/browse/styles.module.css
@@ -1,4 +1,5 @@
 .container {
+    transform-style: preserve-3d;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -40,11 +41,12 @@
     max-width: 1200px;
     box-sizing: border-box;
     display: flex;
-    align-items:center;
+    align-items: center;
     justify-content: space-between;
     margin: 0 auto;
     padding: 0 25px;
 }
+
 /*__________ Modifiers __________*/
 
 .hidden {
